openshift/rhel-lightspeed-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rhel-lightspeed
  name: rhel-lightspeed
  namespace: rhel-lightspeed
spec:
  ports:
  - name: "8000"
    port: 8000
    targetPort: 8000
  - name: "8888"
    port: 8888
    targetPort: 8888
  selector:
    app: rhel-lightspeed
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rhel-lightspeed
  name: rhel-lightspeed-deployment
  namespace: rhel-lightspeed
spec:
  selector:
    matchLabels:
      app: rhel-lightspeed
  template:
    metadata:
      labels:
        app: rhel-lightspeed
      name: rhel-lightspeed
    spec:
      tolerations:
      - key: nvidia.com/gpu
        operator: Exists
        effect: NoSchedule
      containers:
      - name: pgvector # TODO: Should this postgres database have a persistent volume????
        image: registry.redhat.io/rhel-cla/rag-database-rhel10:latest
        ports:
        - containerPort: 8000
          name: porta
        - containerPort: 8888
          name: portb
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          seccompProfile:
            type: "RuntimeDefault"
          capabilities:
            drop:
              - ALL
          runAsUser: 26
          runAsGroup: 26
# TODO: Make and SCC for the postgres container
# bash-5.2$ whoami
# postgres
# bash-5.2$ id
# uid=26(postgres) gid=26(postgres) groups=26(postgres)
#        securityContext:
#          seccompProfile:
#            type: RuntimeDefault
#          runAsNonRoot: true
#          allowPrivilegeEscalation: false
#          capabilities:
#            drop:
#              - ALL
#        #securityContext:
#          #seLinuxOptions:
#            #type: spc_t
#        volumeMounts:
#        - mountPath: /dev/shm
#          name: tmp-0
      - name: llamacpp-model
        command:
        - ramalama
        - --store
        - /models
        - --debug
        - serve
        - --port
        - "8888"
        - --host
        - 0.0.0.0
        - file:///models/Phi-4-mini-instruct-Q4_K_M.gguf
        image: quay.io/ramalama/cuda:latest # TODO: Had to side load the model from installer container and make my own image
        #image: quay.io/danclark/ramalama/cuda:latest
        resources:
          limits:
            nvidia.com/gpu: 1
#        securityContext:
#          seccompProfile:
#            type: RuntimeDefault
#          runAsNonRoot: true
#          allowPrivilegeEscalation: false
#          capabilities:
#            drop:
#              - ALL
        #securityContext:
        #  seLinuxOptions:
        #    type: spc_t
        volumeMounts:
        #- mountPath: /dev/shm
        #  name: tmp-0
        - mountPath: /models
          name: llamacpp-models-pvc
      - name: rlsapi
        image: registry.redhat.io/rhel-cla/rlsapi-rhel10:latest
#        securityContext:
#          seccompProfile:
#            type: RuntimeDefault
#          runAsNonRoot: true
#          allowPrivilegeEscalation: false
#          capabilities:
#            drop:
#              - ALL
        #securityContext:
        #  seLinuxOptions:
        #    type: spc_t
      volumes:
      - name: llamacpp-models-pvc
        persistentVolumeClaim:
          claimName: llamacpp-models
#      - emptyDir:
#          medium: Memory
#        name: tmp-0
